style.css
@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-thin-webfont.woff2') format('woff2');
    font-weight: 100;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-thinitalic-webfont.woff2') format('woff2');
    font-weight: 100;
    font-style: italic;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-light-webfont.woff2') format('woff2');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-lightitalic-webfont.woff2') format('woff2');
    font-weight: 300;
    font-style: italic;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-regular-webfont.woff2') format('woff2');
    font-weight: normal; /* 400 */
    font-style: normal;
}

/* regular italic missing*/

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-medium-webfont.woff2') format('woff2');
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-mediumitalic-webfont.woff2') format('woff2');
    font-weight: 500;
    font-style: italic;
}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-bold-webfont.woff2') format('woff2');
    font-weight: bold; /* 700 */
    font-style: normal;
}

/* bold italic missing */

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-black-webfont.woff2') format('woff2');
    font-weight: 900;
    font-style: normal;

}

@font-face {
    font-family: 'Roboto';
    src: url('fonts/roboto-blackitalic-webfont.woff2') format('woff2');
    font-weight: 900;
    font-style: italic;
}

:root {
    --color-text-normal: #000000;
    --color-text-white: #ffffff;
    --color-text-gray: #636363;
    --color-brand: #1992d4;
    --color-background-default: #e2e8f0;
    --color-background-light: #ffffff;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 16px;
    font-family: "Roboto", Helvetica, Arial, sans-serif;
}

body, html {
    overflow: hidden;
}

ul {
    list-style-type: none;
}

button {
    border: none;
    font-family: "Roboto", Helvetica, Arial, sans-serif;
}

.container {
    display: grid;
    grid-template-rows: 75px 104px 846px;
    grid-template-columns: 1fr 4fr;
}

header {
    background: var(--color-background-light);
    grid-row: 1 / 2;
    grid-column: 2 / 3;

    padding: 0 48px;

    display: grid;
    grid-template-columns: 1fr auto auto auto;
    align-items: center;
    gap: 1rem;
}

header search form {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: start;
    align-items: center;
    gap: 1rem;
}

header .icon.notifications {
    width: 48px;
    height: 48px;

    display: grid;
    justify-content: center;
    align-items: center;
    
}

header .icon.notifications svg {
    width: 24px;
    height: 24px;
}

header .avatar {
    border: 1px solid red;
    width: 48px;
    height: 48px;
}

header .username {
    border: 1px solid red;
    font-size: 1.125rem; /* 18px */
    font-weight: bold;
}

header button {
    width: 32px;
    height: 32px;
    background: none; /* reset from default */
}

header input {
    appearance: none;
    border: none;
    background-color: var(--color-background-default);
    border-radius: 1rem;
    width: 600px;
    height: 30px;
    padding: 0 10px;
}

.banner {
    background: var(--color-background-light);
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    
    color: var(--color-text-normal);

    padding: 0 48px;

    display: grid;
    grid-template-columns: min-content auto min-content min-content min-content;
    align-items: center;
    gap: 24px;
}


.banner .avatar {
    border: 1px solid red;
    width: 72px;
    height: 72px;
    justify-self: center;
}

.banner button {

    background-color: var(--color-brand);
    border-radius: 20px;
    color: var(--color-text-white);
    width: 100px;
    height: 40px;
    font-size: 1rem;
    font-weight: bold;
}

.banner .message p:nth-child(1) {
    font-size: 0.875rem; /* 14px */
    font-weight: bold;
}
.banner .message p:nth-child(2) {
    font-size: 1.5rem; /* 24px */
    font-weight: bold;
}

.sidebar {
    background: var(--color-brand);
    grid-row: 1 / 4;
    grid-column: 1 / 2;

    color: #ffffff;

    padding-left: 30px;
    display: grid;
    justify-content: start;
    grid-auto-rows: min-content;
}

.sidebar a {
    text-decoration: none;
    color: #ffffff;
}

.sidebar .logo-link {
    grid-row: 1 / 2;

    display: grid;
    grid-template-columns: min-content auto;
    grid-auto-rows: min-content;
    align-items: center;
    gap: 20px;

    margin-top: 24px;
    margin-bottom: 62px;
}

.sidebar .logo-link .icon {
    grid-column: 1 / 2;
    
    width: 48px;
    height: 48px;
}

.sidebar .icon svg {
    fill: var(--color-text-white);

}

.sidebar .logo-link .title {
    grid-column: 2 / 3;
    justify-self: start;

    font-size: 1.75rem; /*28px*/
    font-weight: bold;
}

.sidebar .nav {
    grid-row: 2 / 3;
}

.sidebar .nav li  {
    display: grid;
    grid-template-columns: min-content min-content;
    align-items: center;
    justify-content: start;
    gap: 24px;
    margin-bottom: 24px;
}

.sidebar .nav > li:nth-child(7) {
    margin-top: 90px;
}

.sidebar .nav li p {
    font-size: 1.375rem; /*22px*/
    font-weight: bold;
}

.sidebar .nav li svg {
    width: 24px;
    height: 24px;
    fill: var(--color-text-white);
}

main {
    background: var(--color-background-default);
    grid-row: 3 / 4;
    grid-column: 2 / 3;

    color: var(--color-text-normal);

    display: grid;
    grid-template: 1fr 1fr / 2.5fr 1fr;
    gap: 22px;
}

.projects {
    grid-row: 1 / 3;
    grid-column: 1 / 2;

    padding-left: 20px;
    padding-top: 36px;
}

.projects .container-cards {

    margin-top: 16px;

    display: grid;
    grid-template-columns: repeat(auto-fit, 380px);
    grid-auto-rows: 217px;
    gap: 30px;
}

.projects .card {
    background: var(--color-background-light);
    border-radius: 8px;
    border-left: 10px solid #f0b429;
    padding-left: 30px;
    padding-right: 20px;
    padding-top: 36px;
}

.projects .card p {
    color: var(--color-text-gray);
    font-size: 1rem;
    font-weight: normal;
    line-height: 1.25rem;
}

.projects .card p.title {
    color: var(--color-text-normal);
    font-size: 1.125rem;
    font-weight: bold;
}

.announcements {
    background-color: var(--color-background-default);
    padding-top: 36px;

    grid-row: 1 / 2;
    grid-column: 2 / 3;
}

.announcements > .card {
    background-color: var(--color-background-light);
    border-radius: 8px;
    padding: 32px 28px;
    margin-right: 34px;
    margin-top: 16px;


    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: 84px;
    gap: 16px;
}

.announcements > .card > .division {
    overflow: hidden;
    /* text-overflow: ellipsis; */
    /* https://css-tricks.com/almanac/properties/l/line-clamp/ almanac entry for line-clamp - but not good browser support*/
    /* https://codepen.io/zachhanding/pen/MKyVPq cross browser pure css solution with utility classes*/
    border-bottom: 1px solid #d2d2d2;
}

.announcements > .card > .division:nth-child(3) {
    border-bottom: none;
}

.announcements > .card p.title {
    font-size: 0.875rem; /* 14px */
    font-weight: bold;
    color: var(--color-text-normal);
    /* margin-bottom: 0.5rem; */
}

.announcements > .card p {
    font-size: 0.75rem; /* 12px */
    font-weight: normal;
    color: var(--color-text-gray);

}

.trending {
    background-color: var(--color-background-default);
    padding-top: 18px;
    /* TODO: bottom of all .card of page do not sit flush with each other */
/* in addition to gap: 22px in .main  */
    grid-row: 2 / 3;
    grid-column: 2 / 3;
}

.trending > .card {
    background-color: var(--color-background-light);
    border-radius: 8px;
    padding: 22px 28px;
    margin-top: 16px;
    margin-right: 34px;

    display: grid;
    grid-template-columns: 1fr;
    gap: 24px;
}

.trending > .card > .division {
    display: grid;
    grid-template-columns: min-content auto;
    grid-auto-rows: min-content;
    align-items: center;
    gap: 18px;
}

.trending > .card .user {
    font-size: 0.875rem; /* 14px */
    font-weight: normal;
    color: var(--color-text-normal);
}

.trending > .card .project {
    font-size: 0.875rem; /* 12px */
    font-weight: normal;
    color: var(--color-text-gray);
}

.trending > .card .avatar {
    width: 48px;
    height: 48px;
}

.trending > .card img {
    width: 48px;
    height: 48px;
}

